# 3FA

./: .gitattributes  .gitignore  README.md  run.sh  setup.sh
detector/: compare.py  features.py  generate_legit_traffic.py  ingest.py  model.py  pyproject.toml
lab/: audit-policy.yaml  falco-k8saudit-values.yaml  kind-config.yaml  lab-scenario.yaml  make_attack.ps1
